@@ -47,7 +47,7 @@ function delete_result_from_result_file(result_file, result_hash)
 }
 function delete_run_from_result_file(result_file, system_identifier, ppd)
 {
-	if(confirm("Permanently delete this run?"))
+	if(confirm("Permanently delete this '" + system_identifier + "' run?"))
 	{
 		document.getElementById("table-line-" + ppd).style.display = "none";
 		var xhttp = new XMLHttpRequest();
